<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Compto-Bouffe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_fiche_c">Fiche C</string>
    <string name="title_activity_recherche_plats">Recherche Plats</string>
    <string name="send_request_btn_text">RECHERCHER</string>

    <string name="empty_answer">Aucun résultat</string>

    <!-- Recherche des plats -->
    <string name="add_selection_desc">Ajoute 1 élément</string>
    <string name="sub_selection_desc">Supprime 1 élément</string>
    <string name="confirm_btn">CONFIRMER</string>
    <string name="list_recents_header">RÉCENTS</string>
    <string name="list_resultats_header">RÉSULTATS</string>

    <string name="my_list_header">Ma Liste</string>
    <string name="search_hint_en">Rechercher (ANGLAIS)…</string>

    <string name="recapitulatif_objectif">: votre objectif quotidien actuel est de </string>

    <!-- Action Bar menu -->
    <string name="next">Suivant</string>
    <string name="preview">Précédent</string>

    <!-- Menu Principal -->
    <string name="today">Aujourd\'hui</string>
    <string name="today_btn">AUJOURD\'HUI</string>
    <string name="main_menu_title_text">COMPTO-BOUFFE</string>
    <string name="main_menu_recapitulatif_text">RÉCAPITULATIF</string>
    <string name="main_menu_modify_btn_text">MODIFIER MES INFORMATIONS</string>

    <!-- Profils -->
    <string name="profil_titre">Profil</string>
    <string name="profil_prenom_hint">Votre prénom</string>
    <string name="profil_prenom_label">Mon prénom</string>
    <string name="profil_objectif_label">Mon objectif quotidien</string>
    <string name="profil_objectif_hint">Votre objectif (en nombre de calories)</string>
    <string name="profil_btn_valide_text">VALIDER</string>
    <string name="profil_btn_gouv_text">CONNAÎTRE LES RECOMMENDATIONS DU GOUVERNEMENT SUR LES APPORTS JOURNALIERS</string>

    <!-- Recapitulatif d'un menu -->
    <string name="calories_ingerees">Calories ingérées</string>
    <string name="calories_restantes">Calories restantes</string>
    <string name="produit_qte">Qté</string>
    <string name="produit_nom">Nom</string>
    <string name="produit_calorie">Calories</string>
    <string name="produit_sucre">Sucres</string>
    <string name="produit_gras">Gras</string>
    <string name="produit_proteine">Protéines</string>
    <string name="menu_modifier_ma_list">MODIFIER MA LISTE</string>
    <string name="menu_ajouter_un_plat">AJOUTER UN PLAT</string>
    <string name="marge_erreur">Ma marge d\'erreur</string>
    <string name="menu_status_image_desc">État de l\'bjectif</string>

    <string-array name="jour_semaine">
        <item>Dimanche</item>
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
    </string-array>
    <string-array name="mois">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>
</resources>
