<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/compto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profil_prenom_label"
            android:id="@+id/prenom"
            android:padding="10dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/profil_prenom_hint"
            android:ems="10"
            android:layout_toEndOf="@+id/prenom"
            android:id="@+id/editText"
            android:padding="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profil_objectif_label"
            android:id="@+id/textView3"
            android:padding="10dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/profil_objectif_hint"
            android:ems="10"
            android:layout_toEndOf="@+id/textView3"
            android:id="@+id/objectifs"
            android:padding="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/marge_erreur"
            android:id="@+id/marge"
            android:padding="10dp"
            android:gravity="left"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/marge"
            android:paddingLeft="10dp"
            android:weightSum="1.6">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="-5%"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="0 %"
                android:gravity="center"
                android:textSize="20sp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="+5%"/>

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/englobeObjectifs"
        android:id="@+id/englobeBoutons"
        android:paddingTop="10dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_btn_valide_text"
            android:id="@+id/btn_profil_valider"
            android:clickable="true"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_btn_gouv_text"
            android:id="@+id/btn_profil_gouv" />
    </LinearLayout>
</LinearLayout>