<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/compto">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profil_prenom_label"
            android:id="@+id/prenom"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:minHeight="35dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="#ff000000"
            android:layout_alignParentStart="true"
            android:id="@+id/bordureEntrerNomLayout"
            android:layout_marginBottom="10dp"
            android:minHeight="35dp"
            android:layout_below="@+id/prenom">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:id="@+id/entrerNomLayout"
                android:background="#fff0f0f0"
                android:minHeight="35dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/profil_prenom_hint"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:singleLine="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    android:padding="5dp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bordureEntrerNomLayout"
            android:id="@+id/objectifsEtBoutons">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/englobeObjectifs">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/profil_objectif_label"
                    android:id="@+id/textView3"
                    android:height="50dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/objectifs"
                    android:singleLine="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="number"
                    android:hint="@string/profil_objectif_hint" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/englobeObjectifs"
                android:id="@+id/englobeBoutons">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_btn_valide_text"
                    android:id="@+id/btn_profil_valider"
                    android:clickable="true" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_btn_gouv_text"
                    android:id="@+id/btn_profil_gouv" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
