<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.github.compto_bouffe.MenuPrincipal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/prenomFicheB"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_weight="0.25">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_btn"
            android:id="@+id/btn_today"
            android:gravity="center" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_recapitulatif_text"
            android:id="@+id/btn_recapitulatif"
            android:gravity="center" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_modify_btn_text"
            android:id="@+id/btn_modify_profils"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>
